# backend

./: .gitignore  .terraform.lock.hcl  README.md  main.tf  providers.tf
.github/workflows/: backend.yml
db/: README.md  main.tf
db/api-gateway/: index.js  main.tf
db/microservices/base/: main.tf  variables.tf
db/microservices/lamp/: Cargo.toml  action.yml  bla.json
db/microservices/lamp/src/: main.rs
db/microservices/lamp/terraform/: main.tf
db/microservices/rgb/: Cargo.toml  action.yml
db/microservices/rgb/src/: main.rs
db/microservices/rgb/terraform/: main.tf  variables.tf
db/tables/Humidities/: index.js  main.tf
db/tables/Temperatures/: index.js  main.tf  variables.tf
db/tables/Things/: index.js  main.tf
prod/: backend.tfvars
topics/aws-lambda/: main.tf  variables.tf
topics/registry/: Cargo.toml  README.md  action.yml
topics/registry/.github/workflows/: registry.yml
topics/registry/src/: main.rs
topics/registry/terraform/: main.tf
topics/thing-input/: action.yml
topics/thing_input/: Cargo.toml  action.yml
topics/thing_input/src/: main.rs
topics/thing_input/terraform/: main.tf  variables.tf
